# bootcamp_python_aula_08

./: README.md  etl.py  pipeline.py  pyproject.toml
data/: coleta_dia01.json
