[tool.poetry]
name = "bootcamp-python-aula-08"
version = "0.1.0"
description = ""
authors = ["Victor Almeida <vrodrigoleite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
pandera = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
